--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: Chartophile
-email: eben@chartophile.com
+title: LFC Denver
+email: info@lfcdenver.com
 description: > # this means to ignore newlines until "baseurl:"
-  Cartography | Web Mapping | Desktop GIS
+  Official Liverpool FC Supporters Club
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://ebendennis.github.io" # the base hostname & protocol for your site
-twitter_username: ebendennis
-github_username:  ebendennis
+url: "http://lfcdenver.github.io" # the base hostname & protocol for your site
+twitter_username: LFCDenver
+github_username:  LFCDenver
 
 # Build settings
 markdown: kramdown
@@ -14,7 +14,7 @@ markdown: kramdown
 # Prose settings
 prose:
   rooturl: '_posts'
-  siteurl: 'http://ebendennis.github.io/blog/'
+  siteurl: 'http://lfcdenver.github.io/blog/'
   relativeLinks: ''
   media: 'media'
   ignore:
