--- a/_config.yml
+++ b/_config.yml
@@ -1,61 +1,61 @@
 # Site settings
-title: LFC Denver
+title: OLSC Denver
 email: info@lfcdenver.com
 description: > # this means to ignore newlines until "baseurl:"
-  Official Liverpool FC Supporters Club
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://lfcdenver.github.io" # the base hostname & protocol for your site
+    Official Liverpool FC Supporters Club
+baseurl: '' # the subpath of your site, e.g. /blog/
+url: 'http://lfcdenver.github.io' # the base hostname & protocol for your site
 twitter_username: LFCDenver
-github_username:  LFCDenver
+github_username: LFCDenver
 
 # Build settings
 markdown: kramdown
 
 # Prose settings
 prose:
-  rooturl: '_posts'
-  siteurl: 'http://lfcdenver.github.io/'
-  relativeLinks: ''
-  media: 'images'
-  ignore:
-    - index.html
-    - _config.yml
-    - /_layouts
-    - /_includes
-  metadata:
-    _posts:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "post"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Add Tags"
-          placeholder: "Choose Tags"
-          options:
-            - name: "News"
-              value: "news"
-            - name: "Matchday"
-              value: "matchday"
-            - name: "Merch"
-              value: "merch"
-      - name: "title"
-        field:
-          element: "text"
-          label: "title"
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date"
-          value: "CURRENT_DATETIME"
-    _posts/static:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "post"
-      - name: "permalink"
-        field:
-          element: "text"
-          label: "Permalink"
-          value: ""
+    rooturl: '_posts'
+    siteurl: 'http://lfcdenver.github.io/'
+    relativeLinks: ''
+    media: 'images'
+    ignore:
+        - index.html
+        - _config.yml
+        - /_layouts
+        - /_includes
+    metadata:
+        _posts:
+            - name: 'layout'
+              field:
+                  element: 'hidden'
+                  value: 'post'
+            - name: 'tags'
+              field:
+                  element: 'multiselect'
+                  label: 'Add Tags'
+                  placeholder: 'Choose Tags'
+                  options:
+                      - name: 'News'
+                        value: 'news'
+                      - name: 'Matchday'
+                        value: 'matchday'
+                      - name: 'Merch'
+                        value: 'merch'
+            - name: 'title'
+              field:
+                  element: 'text'
+                  label: 'title'
+            - name: 'date'
+              field:
+                  element: 'text'
+                  label: 'Date'
+                  value: 'CURRENT_DATETIME'
+        _posts/static:
+            - name: 'layout'
+              field:
+                  element: 'hidden'
+                  value: 'post'
+            - name: 'permalink'
+              field:
+                  element: 'text'
+                  label: 'Permalink'
+                  value: ''
